# MKT-AI-keyword-clustering

./: .gitignore  API_DOCS.md  ASYNC_API_GUIDE.md  DETAILED_TASK_LIST.md  Dockerfile  PROJECT_COMPLETION_REPORT.md  PROJECT_TASKS.md  README.md  README_PARTNER.md  SYNC_API_GUIDE.md  docker-compose.yml  pyproject.toml  start_app.sh
data/sample/: keywords_toan.csv  sample_keywords.csv
docs/: INDEX.md
docs/api/: API_DOCUMENTATION.md
docs/architecture/: CLUSTER_NAMING_OPTIMIZATION.md  SIMILARITY_UPDATE.md
docs/guides/: POSTMAN_GUIDE.md  POSTMAN_TEST_ADVANCED.md
docs/knowledge_base/: IMPLEMENTATION_PLAN_SEO_METRICS.md  SEO_METRICS_KNOWLEDGE_BASE.md
keyword_cluster_app/: api.py  cli.py  config.py  manage_keys.py  model.py  semantic_matcher.py  semantic_utils.py  utils.py  worker.py
keyword_cluster_app/services/: clustering_service.py  intent_service.py
keyword_cluster_app/utils/: common.py  file_io.py  text_processing.py
scripts/testing/: test_all_levels.py
tests/: test_app.py  test_full_pipeline.py
