[project]
name = "mkt-keyword-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Hieu-vn",email = "phamkhachieuforwork1001@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.6.0",
    "torch>=2.0.0",                   # Đi kèm với bkai model
    "transformers>=4.36.0",           # Đi kèm với bkai model
    "pandas>=2.0",
    "numpy>=1.26",
    "umap-learn>=0.5.6",
    "chardet",
    "slowapi",
    "arq>=0.26.3,<0.27.0",
    "redis[hiredis]<5",
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings"
]


[tool.poetry]
packages = [
    { include = "keyword_cluster_app" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)"
]
